--- a/src/MovieList/MovieList.css
+++ b/src/MovieList/MovieList.css
@@ -6,6 +6,10 @@
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 10px;
+  margin-bottom: 35px;
+  margin-top: 36px;
+  color: red;
+  font-weight: bold;
 }
 
 .list_cards {
