--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -2,6 +2,8 @@
   position: relative;
   overflow: hidden;
   z-index: 1;
+  border: 2px solid red;
+  border-radius: 10px;
 }
 
 .PosterImage_Overlay {
