--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -69,4 +69,6 @@
   z-index: 1000;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px;
+  border: 3px solid red;
+  border-radius: 8px;
 }
