--- a/src/ContactUS/ContactUs.css
+++ b/src/ContactUS/ContactUs.css
@@ -48,3 +48,19 @@ button:hover {
   padding: 7px -2px;
   margin-left: -2rem;
 }
+
+@media only screen and (max-width: 480px) {
+  .contactPage {
+    margin-left: -2rem;
+  }
+  .Navbar {
+    width: 107%;
+  }
+  .Navbar img {
+    margin-left: 45px;
+    margin-top: 8px;
+  }
+  .right {
+    margin-right: 1rem;
+  }
+}
