--- a/src/Pages/MovieDetails/MovieDetail.css
+++ b/src/Pages/MovieDetails/MovieDetail.css
@@ -98,3 +98,11 @@
 .MovieWatchNow button:hover {
   color: white;
 }
+
+@media only screen and (max-width: 480px) {
+  .MovieWatchNow {
+    margin-left: 15rem;
+
+    margin-top: -15rem;
+  }
+}
