--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -39,7 +39,7 @@ a {
 @media only screen and (max-width: 480px) {
   .header-link {
     font-size: smaller;
-    display: flex;
+    display: grid;
     flex-direction: row;
     gap: 8px;
     margin-left: -25rem;
