--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -72,3 +72,16 @@
   border: 3px solid red;
   border-radius: 8px;
 }
+@media screen and (max-width: 390px) {
+  .cards {
+    width: 86%;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .cards {
+    width: 86%;
+    margin: 0 auto;
+  }
+}
