--- a/src/FrontPage/Frontpage.css
+++ b/src/FrontPage/Frontpage.css
@@ -87,7 +87,7 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 45%;
+  width: 47%;
   margin-right: 0rem;
   height: 103%;
   padding: 6px 8px;
@@ -104,10 +104,10 @@
   background: none;
   color: white;
 }
-
+/* @media screen and (max-width: 480px) { */
 /* only screen and (min-width: 480px) */
 /* Styles for mobile view */
-@media only screen and (max-width: 480px) {
+@media screen and (max-width: 480px) {
   .Main_Div {
     gap: 1rem;
     margin-left: 0rem;
