--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -39,23 +39,45 @@ a {
 @media only screen and (max-width: 480px) {
   .header-link {
     font-size: smaller;
-    display: grid;
+    display: flex;
     flex-direction: row;
-    gap: 8px;
-    margin-left: -25rem;
+    gap: 47px;
+    margin-left: -24rem;
   }
   .header_logo {
     width: 14%;
     margin-left: -1rem;
   }
   .userEmailWhenLogIn {
-    margin-left: 23rem;
+    margin-left: 20rem;
     font-size: 10px;
-    margin-top: -22px;
+    margin-top: -27px;
   }
   .logOut button {
     width: 55%;
     font-size: 11px;
     margin-left: 38px;
+    cursor: pointer;
+    text-align: center;
+    padding: 6px 4px;
+    margin-left: 13px;
+  }
+  .search {
+    width: 83%;
+    margin-bottom: 3rem;
+    margin-left: 10px;
+    color: black;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .header-link {
+    gap: 12px;
+    margin-left: -26rem;
+  }
+  .userEmailWhenLogIn {
+    margin-left: 15rem;
+    font-size: 10px;
+    margin-top: -29px;
   }
 }
